# fastapi_basic

./: celery_config.py  pyproject.toml
models/: __init__.py  database.py
tasks/: __init__.py
